Correct a layout bug in the list management screen and add a way to get to a list from its details page.

--- a/resources/public/toto.css
+++ b/resources/public/toto.css
@@ -458,6 +458,11 @@ div.deleted_item {
     color: #707070;
 }
 
+.list-list .item-control {
+    width: 1.5em;
+    min-width: 1.5em;
+}
+
 /* Item list styling */
 
 table.item-list {
